force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__External_Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Stage__c</fullName>
    <description>This field is currently not used.</description>
    <label>External Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>