force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is manually populated. A loan is booked after the customer has been funded. When true, it denotes whether the stage and status referenced on this record represents the &quot;Booked&quot; stage for a loan. This field is used to determine whether the &quot;LLC_BI__Is_Booked__c&quot; field on loan is automatically checked.</description>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>