force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is manually populated. A loan is closed after approval but prior to being booked. When true, it denotes whether the stage and status referenced on this record represents the &quot;Closed&quot; stage for a loan. This field is used to determine whether the &quot;LLC_BI__Is_Closed__c&quot; field on loan is automatically checked.</description>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>