force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Is_Covenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Covenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if a Covenant related Product State Config (checked). Default is unchecked.</description>
    <inlineHelpText>This field indicates if a Covenant related Product State Config (checked). Default is unchecked.</inlineHelpText>
    <label>Is Covenant</label>
    <type>Checkbox</type>
</CustomField>