force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Is_Excluded_From_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Excluded_From_Stage_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is manually populated. It is used with opportunity history. When true, a loan in the stage and status denoted on the record with the product type this record is associated to will not be used in opportunity history calculations.</description>
    <label>Is Excluded From Stage Duration</label>
    <type>Checkbox</type>
</CustomField>