force-app/main/default/objects/LLC_BI__Product_State_Config__c/fields/LLC_BI__Is_Ready_To_Transmit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Ready_To_Transmit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. It is used for CUSO implementations. When true, it denotes whether the stage and status referenced on this record represents a stage and status for the loan where its data should be transmitted to the CUSO data storage.</description>
    <label>Is Ready to Transmit</label>
    <type>Checkbox</type>
</CustomField>